@@ -29,7 +29,6 @@ import io.cloudbeaver.server.CBApplication;
 import io.cloudbeaver.server.CBPlatform;
 import io.cloudbeaver.service.core.DBWServiceCore;
 import io.cloudbeaver.service.security.SMUtils;
-import io.cloudbeaver.service.session.WebSessionManager;
 import io.cloudbeaver.utils.WebConnectionFolderUtils;
 import io.cloudbeaver.utils.WebDataSourceUtils;
 import io.cloudbeaver.utils.WebEventUtils;
@@ -67,10 +66,7 @@ import org.jkiss.dbeaver.runtime.jobs.ConnectionTestJob;
 import org.jkiss.dbeaver.utils.RuntimeUtils;
 import org.jkiss.utils.CommonUtils;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
 /**
@@ -128,9 +124,9 @@ public class WebServiceCore implements DBWServiceCore {
         if (projectIds != null) {
             stream = stream.filter(c -> projectIds.contains(c.getProjectId()));
         }
-        List<DBPDriver> applicableDrivers = CBPlatform.getInstance().getApplicableDrivers();
-        return stream.filter(c -> applicableDrivers.contains(c.getDataSourceContainer().getDriver()))
-            .collect(Collectors.toList());
+        Set<String> applicableDrivers = WebServiceUtils.getApplicableDriversIds();
+        return stream.filter(c -> applicableDrivers.contains(c.getDataSourceContainer().getDriver().getId()))
+            .toList();
     }
 
     @Deprecated
@@ -294,7 +290,7 @@ public class WebServiceCore implements DBWServiceCore {
     @Deprecated
     public WebSession updateSession(@NotNull HttpServletRequest request, @NotNull HttpServletResponse response)
         throws DBWebException {
-        WebSessionManager sessionManager = CBPlatform.getInstance().getSessionManager();
+        var sessionManager = CBPlatform.getInstance().getSessionManager();
         sessionManager.touchSession(request, response);
         return sessionManager.getWebSession(request, response, true);
     }
@@ -504,7 +500,9 @@ public class WebServiceCore implements DBWServiceCore {
         }
 
         dataSource.setFolder(config.getFolder() != null ? sessionRegistry.getFolder(config.getFolder()) : null);
-
+        if (config.isDefaultAutoCommit() != null) {
+            dataSource.setDefaultAutoCommit(config.isDefaultAutoCommit());
+        }
         WebServiceUtils.setConnectionConfiguration(dataSource.getDriver(),
             dataSource.getConnectionConfiguration(),
             config);
